# project-indexer-mcp

./: .env  .env.example  .gitignore  API_REFERENCE.md  CLAUDE_DESKTOP_CONFIG.md  FINAL_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICKSTART.md  README.md  README_SETUP.md  SETUP_PYTHON312.md  START_HERE.md  WEB_PORTAL.md  config.yaml.example  pyproject.toml  requirements.txt  run_server.py  run_web_server.py  start_server.sh  test_call_graph.py  test_imports.py
src/: config.py  server.py
src/indexer/: __init__.py  analyzer.py  ast_analyzer.py  call_resolver.py  chunker.py  context_analyzer.py  embedder.py  enhanced_analyzer.py  enhanced_indexer.py  file_index_manager.py  function_index_manager.py  index_manager.py  iterative_analyzer.py  language_adapters.py  layer_classifier.py  scanner.py  simple_checkpoint.py  trigger_detector.py
src/indexer/analyzers/: __init__.py  base.py  generic_analyzer.py  kotlin_analyzer.py  python_analyzer.py
src/providers/: __init__.py  base.py  factory.py  huggingface_provider.py  openai_provider.py
src/search/: __init__.py  flow_searcher.py
src/storage/: __init__.py  analysis_repository.py  call_graph_models.py  call_graph_store.py  checkpoint_manager.py  chroma_client.py  models.py
src/utils/: file_types.py  logger.py  rate_limiter.py
src/web/: __init__.py  server.py
src/web/static/: analysis.html  checkpoints.html  functions.html  index.html
